:rocket: concluding first text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./caso_1.js"></script>
 </head>
 <body>
-    ok
+    <button id="download">baixar json</button>
+    <script src="./caso_1.js"></script>
+
 </body>
 </html>
